--- a/src/Views/Parent/ListeParent.fxml
+++ b/src/Views/Parent/ListeParent.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="533.0" prefWidth="795.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Parent.ListeParentController">
+<AnchorPane id="AnchorPane" prefHeight="745.0" prefWidth="936.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Parent.ListeParentController">
     <children>
         <BorderPane layoutX="19.0" layoutY="38.0" prefHeight="562.0" prefWidth="985.0">
-            <center>
-                <TableView fx:id="TbP" prefHeight="562.0" prefWidth="978.0" BorderPane.alignment="CENTER">
+         <top>
+                <TableView fx:id="TbP" prefHeight="592.0" prefWidth="803.0" BorderPane.alignment="CENTER">
                     <columns>
                         <TableColumn fx:id="col_id" prefWidth="75.0" text="ID" visible="false" />
                         <TableColumn fx:id="col_nom" prefWidth="75.0" text="Nom" />
@@ -19,7 +24,10 @@
                         <TableColumn fx:id="col_supp" prefWidth="89.0" text="Supprimer" />
                     </columns>
                 </TableView>
-            </center>
+         </top>
         </BorderPane>
+      <Text layoutX="28.0" layoutY="665.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rechercher" wrappingWidth="94.0" />
+      <Button fx:id="srbtn" layoutX="487.0" layoutY="644.0" mnemonicParsing="false" text="Recherche" />
+      <TextField layoutX="143.0" layoutY="647.0" fx:id="txtsearch" />
     </children>
 </AnchorPane>
