--- a/src/view/jardin/rechercheJardinEnfant2.fxml
+++ b/src/view/jardin/rechercheJardinEnfant2.fxml
@@ -17,44 +17,7 @@
          <children>
               <AnchorPane prefHeight="200.0" prefWidth="200.0">
                   <children>
-                      <Text layoutX="181.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chercher jardin d'enfant " textAlignment="CENTER" wrappingWidth="237.02099609375">
-                          <font>
-                              <Font size="21.0" />
-                          </font>
-                      </Text>
-                      <TextField fx:id="recherche" layoutX="14.0" layoutY="92.0" text="votre choix.." />
-                      <MenuButton layoutX="466.0" layoutY="92.0" mnemonicParsing="false" text="chercher avec ..">
-                          <items>
-                              <MenuItem mnemonicParsing="false" onAction="#fnNom" text="Trouver avec nom" />
-                              <MenuItem mnemonicParsing="false" onAction="#fnAdresse" text="Trouver avec adresse" />
-                              <MenuItem mnemonicParsing="false" onAction="#fnTarif" text="Trouver avec tarif" />
-                              <MenuItem mnemonicParsing="false" onAction="#fnNum" text="Trouver avec numero tel" />
-                              <MenuItem mnemonicParsing="false" onAction="#fnEtat" text="Trouver avec etat" />
-                          </items>
-                      </MenuButton>
-                      <TableView fx:id="jardin" layoutX="58.0" layoutY="129.0" prefHeight="215.0" prefWidth="450.0">
-                          <columns>
-                              <TableColumn prefWidth="75.0" text="Tarif" />
-                              <TableColumn prefWidth="75.0" text="Description" />
-                              <TableColumn prefWidth="75.0" text="Adresse" />
-                              <TableColumn prefWidth="75.0" text="Numero Tel" />
-                              <TableColumn prefWidth="75.0" text="Etat" />
-                              <TableColumn prefWidth="75.0" text="Nom" />
-                          </columns>
-                          <contextMenu>
-                              <ContextMenu>
-                                  <items>
-                                      <MenuItem mnemonicParsing="false" onAction="#handlerEdit" text="Edit" />
-                                      <MenuItem mnemonicParsing="false" onAction="#handlerDelet" text="Delet" />
-                                  </items>
-                              </ContextMenu>
-                          </contextMenu>
-                      </TableView>
-                  </children>
-              </AnchorPane>
-         </children>
-        </StackPane>
-        <Text layoutX="191.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chercher jardin d'enfant " textAlignment="CENTER" wrappingWidth="237.02099609375">
+                        <Text layoutX="191.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chercher jardin d'enfant " textAlignment="CENTER" wrappingWidth="237.02099609375">
             <font>
                 <Font size="21.0" />
             </font>
@@ -71,12 +34,14 @@
         </MenuButton>
         <TableView fx:id="jardin" layoutX="68.0" layoutY="139.0" prefHeight="215.0" prefWidth="450.0">
             <columns>
+                 <TableColumn fx:id="id" prefWidth="75.0" text="id" visible="false" />
+
                 <TableColumn fx:id="tarif" prefWidth="75.0" text="Tarif" />
                 <TableColumn fx:id="description" prefWidth="75.0" text="Description" />
                 <TableColumn fx:id="adresse" prefWidth="75.0" text="Adresse" />
                 <TableColumn fx:id="numtel" prefWidth="75.0" text="Numero Tel" />
                 <TableColumn fx:id="etat" prefWidth="75.0" text="Etat" />
-                <TableColumn fx:id="nom" prefWidth="75.0" text="Nom" />
+                <TableColumn fx:id="colnom" prefWidth="75.0" text="Nom" />
             </columns>
             <contextMenu>
                 <ContextMenu>
@@ -87,5 +52,11 @@
                 </ContextMenu>
             </contextMenu>
         </TableView>
+                      
+                  </children>
+              </AnchorPane>
+         </children>
+        </StackPane>
+     
     </children>
 </AnchorPane>
