--- a/src/Views/ParentAjAbo.fxml
+++ b/src/Views/ParentAjAbo.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="views.ParentAjAboController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.ParentAjAboController">
    <children>
       <SplitPane layoutX="86.0" layoutY="14.0" orientation="VERTICAL" prefHeight="350.0" prefWidth="402.0">
          <items>
@@ -17,8 +16,8 @@
                <children>
                   <Text layoutX="47.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type" wrappingWidth="33.580078125" />
                   <Text layoutX="47.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enfant" />
-                  <ComboBox fx:id="enf" layoutX="114.0" layoutY="100.0" prefWidth="150.0" />
-                  <ComboBox fx:id="type" layoutX="114.0" layoutY="158.0" prefWidth="150.0" />
+                  <ComboBox fx:id="enf" layoutX="114.0" layoutY="100.0" onAction="#recupenf" prefWidth="150.0" promptText="Choix" />
+                  <ComboBox fx:id="type" layoutX="114.0" layoutY="158.0" onAction="#mod" prefWidth="150.0" promptText="Choix" />
                   <Button fx:id="btn_ajt" layoutX="129.0" layoutY="264.0" mnemonicParsing="false" onAction="#ajouter" prefHeight="26.0" prefWidth="108.0" text="Ajouter" />
                   <Text layoutX="64.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ajouter Abonnement">
                      <font>
@@ -26,7 +25,10 @@
                      </font>
                   </Text>
                   <Text layoutX="35.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Montant" />
-                  <TextField fx:id="montant" layoutX="115.0" layoutY="213.0" />
+                  <TextField fx:id="montant" alignment="CENTER" editable="false" layoutX="115.0" layoutY="213.0" opacity="0.53">
+                     <font>
+                        <Font name="System Bold Italic" size="12.0" />
+                     </font></TextField>
                </children>
             </AnchorPane>
          </items>
