--- a/src/Views/Chauffeurs/Consulter.fxml
+++ b/src/Views/Chauffeurs/Consulter.fxml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="486.0" prefWidth="915.0" style="-fx-background-color: #ededed;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Chauffeurs.ConsulterController">
+<AnchorPane id="AnchorPane" prefHeight="486.0" prefWidth="915.0" style="-fx-background-color: #ededed;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Chauffeurs.ConsulterController">
    <children>
       <ListView fx:id="listview" layoutX="14.0" layoutY="46.0" prefHeight="440.0" prefWidth="208.0" />
       <AnchorPane fx:id="info" layoutX="228.0" layoutY="40.0" prefHeight="456.0" prefWidth="673.0" visible="false">
@@ -84,6 +91,6 @@
          </children>
       </Pane>
       <TextField fx:id="search" layoutX="14.0" layoutY="21.0" onKeyTyped="#chercher" prefHeight="25.0" prefWidth="208.0" promptText="Chercher ..." />
-      <Button fx:id="mapp" layoutX="809.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Map" />
+      <Button fx:id="mapp" layoutX="809.0" layoutY="14.0" mnemonicParsing="false" onAction="#map" prefHeight="25.0" prefWidth="92.0" text="Map" />
    </children>
 </AnchorPane>
