--- a/src/Views/ParentAfficherEnf.fxml
+++ b/src/Views/ParentAfficherEnf.fxml
@@ -23,6 +23,6 @@
       <TextField fx:id="txt_r" layoutX="156.0" layoutY="40.0" onKeyPressed="#rechercher" />
       <ComboBox fx:id="cmb_r" layoutX="371.0" layoutY="40.0" prefWidth="150.0" promptText="Choix" />
       <Button fx:id="ajouter" layoutX="26.0" layoutY="147.0" mnemonicParsing="false" onAction="#redirect" prefHeight="26.0" prefWidth="83.0" text="Ajouter" />
-      <Button fx:id="modifier" layoutX="26.0" layoutY="226.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="83.0" text="Modifier" />
+      <Button fx:id="modifier" layoutX="26.0" layoutY="226.0" mnemonicParsing="false" onAction="#modifredirect" prefHeight="26.0" prefWidth="83.0" text="Modifier" />
    </children>
 </AnchorPane>
