--- a/src/Views/ParentAjouterEnfant.fxml
+++ b/src/Views/ParentAjouterEnfant.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="449.0" prefWidth="654.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="views.ParentAjouterEnfantController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="449.0" prefWidth="654.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.ParentAjouterEnfantController">
    <children>
       <SplitPane layoutX="47.0" layoutY="27.0" orientation="VERTICAL" prefHeight="407.0" prefWidth="534.0">
          <items>
@@ -29,7 +28,7 @@
                   <TextField fx:id="prenom" layoutX="167.0" layoutY="156.0" />
                   <DatePicker fx:id="dat" layoutX="165.0" layoutY="213.0" />
                   <Text layoutX="48.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sexe" />
-                  <ComboBox fx:id="sex" layoutX="166.0" layoutY="267.0" prefWidth="150.0" />
+                  <ComboBox fx:id="sex" layoutX="166.0" layoutY="267.0" prefWidth="150.0" promptText="Choix" />
                </children>
             </AnchorPane>
          </items>
